# pyscipopt-devcontainer

./: .mega-linter.yml  .ruff.toml  README.md  kics-config.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: requirements.txt
.github/workflows/: test-python.yml
example/: simple.py
test/: test_simple.py
